note overflow fix

--- a/src/components/SessionNoteDetail/SessionNoteDetail.css
+++ b/src/components/SessionNoteDetail/SessionNoteDetail.css
@@ -28,7 +28,7 @@
 
 .session-note p {
     padding: 2vh 3vw 2vh;
-    overflow: auto;
+    overflow-y: auto;
     font-size: 2vmin;
     white-space: pre;
     text-wrap: wrap;
